[1114] No longer API only
* Extract ApiController as a base for v1 and v2 APIs
* Add the missing bits of Rails that we need for UI

--- a/.gitignore
+++ b/.gitignore
@@ -47,5 +47,11 @@ lock.json
 *secret*.tfvars
 .terraform/
 
-node_modules
-public/packs/
+# Ignore master key for decrypting credentials and more.
+/config/master.key
+
+/public/packs
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
