[1114] Add DfE Signin
* Add DfE Signin pages and configuration
* Add UserSession model

We are adding a support interface. Users will authenticate via
`/sign-in`

--- a/config/settings/production.yml
+++ b/config/settings/production.yml
@@ -2,6 +2,16 @@ gcp_api_key: please_change_me
 publish_api_url: https://api.publish-teacher-training-courses.service.gov.uk
 publish_url: https://www.publish-teacher-training-courses.service.gov.uk
 find_url: https://www.find-postgraduate-teacher-training.service.gov.uk
+
+base_url: https://api.publish-teacher-training-courses.service.gov.uk
+
+dfe_signin:
+  issuer: https://oidc.signin.education.gov.uk
+  secret: please_change_me # Override with SETTINGS__DFE_SIGNIN__SECRET
+  profile: https://profile.signin.education.gov.uk
+  base_url: https://api.publish-teacher-training-courses.service.gov.uk
+  user_search_url: https://support.signin.education.gov.uk/users
+
 bg_jobs:
   save_statistic:
     cron: "0 0 * * *" # daily at midnight
@@ -9,3 +19,5 @@ bg_jobs:
     queue: save_statistic
 skylight:
   enable: true
+environment:
+  name: "beta"
