--- a/config/settings/test.yml
+++ b/config/settings/test.yml
@@ -9,3 +9,5 @@ bg_jobs:
     cron: "0 0 * * *" # daily at midnight
     class: "SaveStatisticJob"
     queue: save_statistic
+environment:
+  name: "development"
