--- a/config/settings/staging.yml
+++ b/config/settings/staging.yml
@@ -1,9 +1,22 @@
 gcp_api_key: please_change_me
-publish_api_url: https://qa.api.publish-teacher-training-courses.service.gov.uk
+publish_api_url: https://staging.api.publish-teacher-training-courses.service.gov.uk
 publish_url: https://staging.publish-teacher-training-courses.service.gov.uk
 find_url: https://staging.find-postgraduate-teacher-training.service.gov.uk
+
+# URL of this app for the callback after sigining in
+base_url: https://staging.api.publish-teacher-training-courses.service.gov.uk
+
+dfe_signin:
+  issuer: https://pp-oidc.signin.education.gov.uk
+  profile: https://pp-profile.signin.education.gov.uk
+  secret: please_change_me # Override with SETTINGS__DFE_SIGNIN__SECRET
+  base_url: https://staging.api.publish-teacher-training-courses.service.gov.uk
+  user_search_url: https://pp-support.signin.education.gov.uk/users
+
 bg_jobs:
   save_statistic:
     cron: "0 0 * * *" # daily at midnight
     class: "SaveStatisticJob"
     queue: save_statistic
+environment:
+  name: "staging"
