--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       qa:
         description: Deploy to qa?
-        default: 'true'
+        default: 'false'
         required: true
       staging:
         description: Deploy to staging?
@@ -39,7 +39,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  deploy: 
+  deploy:
     name: ${{ matrix.environment }} Deployment
     runs-on: ubuntu-latest
     needs: [prepare-matrix]
@@ -113,7 +113,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref:   ${{ github.ref }}
-          checkName: smoke-tests-${{ env.DEPLOY_ENV }} 
+          checkName: smoke-tests-${{ env.DEPLOY_ENV }}
           timeoutSeconds:  300
           intervalSeconds: 15
 
