--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - qa
   pull_request:
     branches:
       - master
@@ -99,6 +100,14 @@ jobs:
         workflow: Deploy
         token: ${{ secrets.ACTIONS_API_ACCESS_TOKEN  }}
         inputs: '{"staging": "true", "production": "true", "sandbox": "true", "sha": "${{ env.GIT_SHA_SHORT }}"}'
+
+    - name: Trigger Deployment to QA
+      if: ${{ success() && github.ref == 'refs/heads/qa' }}
+      uses: benc-uk/workflow-dispatch@v1
+      with:
+        workflow: Deploy
+        token: ${{ secrets.ACTIONS_API_ACCESS_TOKEN  }}
+        inputs: '{"qa": "true", "sha": "${{ env.GIT_SHA_SHORT }}"}'
 
     - name: Alert Build Failures
       if: ${{ failure() && github.ref == 'refs/heads/master' }}
