[1242] Scaffold out providers view WIP

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
+!.keep
+*.DS_Store
+*.swo
+*.swp
+
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
