--- a/config/settings/production.yml
+++ b/config/settings/production.yml
@@ -17,5 +17,7 @@ bg_jobs:
     cron: "0 0 * * *" # daily at midnight
     class: "SaveStatisticJob"
     queue: save_statistic
+skylight:
+  enable: true
 environment:
   name: "beta"
