--- a/config/settings/qa.yml
+++ b/config/settings/qa.yml
@@ -11,5 +11,7 @@ bg_jobs:
     cron: "0 0 * * *" # daily at midnight
     class: "SaveStatisticJob"
     queue: save_statistic
+skylight:
+  enable: true
 environment:
   name: "qa"
