[1544] Fix return path after dfe sign in so it doesn't clash with the docs support page

--- a/docs/config/tech-docs.yml
+++ b/docs/config/tech-docs.yml
@@ -4,7 +4,7 @@ host: api.publish-teacher-training-courses.service.gov.uk
 # Header-related options
 show_govuk_logo: true
 service_name: Teacher Training Courses
-service_link: https://www.find-postgraduate-teacher-training.service.gov.uk/
+service_link: https://api.publish-teacher-training-courses.service.gov.uk/
 phase: Beta
 
 # Links to show on right-hand-side of header
