--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ bin/fetch_config.rb
 
 # Ignore sanitised production data dump
 *.sql.gz
+*.sql
 
 # Exclude api doc application node modules
 docs/node_modules
