Adding config for rollover environment

--- a/terraform/workspace_variables/app_config.yml
+++ b/terraform/workspace_variables/app_config.yml
@@ -21,3 +21,8 @@ sandbox:
   <<: *default
   RAILS_ENV: sandbox
   RACK_ENV: sandbox
+
+rollover:
+  <<: *default
+  RAILS_ENV: rollover
+  RACK_ENV: rollover
