Trigger review app deployment on pull_request event

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - master
-      - qa
   pull_request:
     branches:
       - master
@@ -67,6 +66,15 @@ jobs:
         build-args: |
           BUILDKIT_INLINE_CACHE=1
           COMMIT_SHA=paas-${{ github.sha }}
+
+    - name: Trigger Review App Deployment
+      if: ${{ success() && github.event_name == 'pull_request' }}
+      uses: benc-uk/workflow-dispatch@v1
+      with:
+        workflow: Deploy
+        ref: ${{ github.head_ref }}
+        token: ${{ secrets.ACTIONS_API_ACCESS_TOKEN  }}
+        inputs: '{"pr": "${{ github.event.pull_request.number }}", "sha": "${{ env.GIT_SHA_SHORT }}"}'
 
     - name: Setup tests
       run: |
