--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,9 @@ on:
         description: Deploy to rollover?
         default: 'false'
         required: true
+      pr:
+        description: PR number for the review app
+        required: false        
       sha:
         description: Commit sha to be deployed
         required: true
@@ -33,10 +36,16 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 15
     outputs:
-      environments: ${{ steps.select-environments.outputs.environments }}
+      environments: ${{ steps.select-environments.outputs.environments || steps.set-pr-environment.outputs.environments }}
     steps:
       - id:   select-environments
         uses: DFE-Digital/bat-infrastructure/actions/prepare-environment-matrix@main
+
+      - id:  set-pr-environment
+        if:  github.event.inputs.pr != ''
+        run: echo "::set-output name=environments::$PR"
+        env:
+          PR: '{"environment": ["${{ github.event.inputs.pr }}"]}'
 
       - uses: DFE-Digital/github-actions/turnstyle@master
         name: Wait for other inprogress deployment runs
