--- a/terraform/workspace_variables/app_config.yml
+++ b/terraform/workspace_variables/app_config.yml
@@ -26,3 +26,8 @@ rollover:
   <<: *default
   RAILS_ENV: rollover
   RACK_ENV: rollover
+
+review:
+  <<: *default
+  RAILS_ENV: review
+  RACK_ENV: review
