--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -86,10 +86,12 @@ jobs:
             echo "PR_NUMBER=$PR_NUMBER" >> $GITHUB_ENV; 
             echo "DEPLOY_ENV=review" >> $GITHUB_ENV
             echo "BACKEND_KEY=-backend-config=key=pr-$PR_NUMBER.tfstate" >> $GITHUB_ENV; 
-            echo "TF_VAR_paas_web_app_host_name=$PR_NUMBER" >> $GITHUB_ENV; 
+            echo "TF_VAR_paas_web_app_host_name=$PR_NUMBER" >> $GITHUB_ENV;
+            echo "DEPLOY_URL=https://teacher-training-api-pr-$PR_NUMBER.london.cloudapps.digital" >> $GITHUB_ENV;
             . terraform/workspace_variables/review.sh
           else
             . terraform/workspace_variables/$DEPLOY_ENV.sh
+            echo "DEPLOY_URL=https://$DEPLOY_ENV.api.publish-teacher-training-courses.service.gov.uk" >> $GITHUB_ENV;
           fi;
 
           echo "TF_VAR_key_vault_name=$TF_VAR_key_vault_name" >> $GITHUB_ENV
@@ -154,7 +156,7 @@ jobs:
           env:    ${{ matrix.environment }}
           status: ${{ job.status }}
           deployment_id: ${{ steps.deployment.outputs.deployment_id }}
-          env_url: ${{ format('https://teacher-training-api-{0}.london.cloudapps.digital', matrix.environment) }}
+          env_url: ${{ env.DEPLOY_URL }}
 
       - name: Alert on Failure
         if: ${{ failure() && github.ref == 'refs/heads/master' }}
