--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,9 @@ on:
         description: Deploy to rollover?
         default: 'false'
         required: true
+      pr:
+        description: PR number for the review app
+        required: false        
       sha:
         description: Commit sha to be deployed
         required: true
@@ -33,10 +36,17 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 15
     outputs:
-      environments: ${{ steps.select-environments.outputs.environments }}
+      environments: ${{ steps.select-environments.outputs.environments || steps.set-pr-environment.outputs.environments }}
     steps:
       - id:   select-environments
+        if:   github.event.inputs.pr == ''
         uses: DFE-Digital/bat-infrastructure/actions/prepare-environment-matrix@main
+
+      - id:  set-pr-environment
+        if:  github.event.inputs.pr != ''
+        run: echo "::set-output name=environments::$PR"
+        env:
+          PR: '{"environment": ["${{ github.event.inputs.pr }}"]}'
 
       - uses: DFE-Digital/github-actions/turnstyle@master
         name: Wait for other inprogress deployment runs
@@ -53,12 +63,11 @@ jobs:
     steps:
       - name: Start ${{ matrix.environment }} Deployment
         uses: bobheadxi/deployments@v0.4.3
-        id: deployment
+        id:   deployment
         with:
           step: start
           token: ${{ secrets.GITHUB_TOKEN }}
           env:   ${{ matrix.environment }}
-          ref:   ${{ github.event.inputs.sha }}
 
       - name: Checkout
         uses: actions/checkout@v2
@@ -72,8 +81,19 @@ jobs:
         run: |
           echo "DOCKER_IMAGE=$DOCKER_IMAGE" >> $GITHUB_ENV
           echo "DEPLOY_ENV=$DEPLOY_ENV" >> $GITHUB_ENV
+          if [ ! -z "${{ github.event.inputs.pr }}" ]; then
+            PR_NUMBER=${{ github.event.inputs.pr }}
+            echo "PR_NUMBER=$PR_NUMBER" >> $GITHUB_ENV
+            echo "DEPLOY_ENV=review" >> $GITHUB_ENV
+            echo "BACKEND_KEY=-backend-config=key=pr-$PR_NUMBER.tfstate" >> $GITHUB_ENV
+            echo "TF_VAR_paas_web_app_host_name=$PR_NUMBER" >> $GITHUB_ENV
+            echo "DEPLOY_URL=https://teacher-training-api-pr-$PR_NUMBER.london.cloudapps.digital" >> $GITHUB_ENV
+            . terraform/workspace_variables/review.sh
+          else
+            . terraform/workspace_variables/$DEPLOY_ENV.sh
+            echo "DEPLOY_URL=https://$DEPLOY_ENV.api.publish-teacher-training-courses.service.gov.uk" >> $GITHUB_ENV
+          fi;
 
-          . terraform/workspace_variables/$DEPLOY_ENV.sh
           echo "TF_VAR_key_vault_name=$TF_VAR_key_vault_name" >> $GITHUB_ENV
           echo "TF_VAR_key_vault_app_secret_name=$TF_VAR_key_vault_app_secret_name" >> $GITHUB_ENV
           echo "TF_VAR_key_vault_infra_secret_name=$TF_VAR_key_vault_infra_secret_name" >> $GITHUB_ENV
@@ -96,7 +116,7 @@ jobs:
       - name: Terraform init, plan & apply
         working-directory: terraform
         run: |
-            terraform init -backend-config workspace_variables/${{ env.DEPLOY_ENV }}_backend.tfvars
+            terraform init -backend-config workspace_variables/${{ env.DEPLOY_ENV }}_backend.tfvars $BACKEND_KEY
             terraform plan -var-file workspace_variables/${{ env.DEPLOY_ENV }}.tfvars -out tfplan
             terraform apply -auto-approve -input=false "tfplan"
         env:
@@ -109,10 +129,10 @@ jobs:
         with:
           workflow: Smoke Tests
           token:    ${{ secrets.ACTIONS_API_ACCESS_TOKEN }}
-          inputs:   '{"environment": "${{ env.DEPLOY_ENV }}"}'
+          inputs:   '{"environment": "${{ env.DEPLOY_ENV }}", "pr": "${{ env.PR_NUMBER }}"}'
 
       - name: Wait for smoke tests
-        id: wait_for_smoke_tests
+        id:   wait_for_smoke_tests
         uses: fountainhead/action-wait-for-check@v1.0.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -122,19 +142,19 @@ jobs:
           intervalSeconds: 15
 
       - name: Stop when smoke tests fail
-        if: steps.wait_for_smoke_tests.outputs.conclusion == 'failure'
+        if:   steps.wait_for_smoke_tests.outputs.conclusion == 'failure'
         run: exit 1
 
       - name: Update ${{ matrix.environment }} status
-        if: ${{ always() }}
+        if:   ${{ always() }}
         uses: bobheadxi/deployments@v0.4.3
         with:
           step:   finish
           token:  ${{ secrets.GITHUB_TOKEN }}
           env:    ${{ matrix.environment }}
-          ref:    ${{ github.event.inputs.sha }}
           status: ${{ job.status }}
           deployment_id: ${{ steps.deployment.outputs.deployment_id }}
+          env_url: ${{ env.DEPLOY_URL }}
 
       - name: Alert on Failure
         if: ${{ failure() && github.ref == 'refs/heads/master' }}
