--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -37,7 +37,8 @@ jobs:
         run: |
           if [ ! -z "${{ github.event.inputs.pr }}" ]; then 
             PR_NUMBER=${{ github.event.inputs.pr }}
-            echo "SETTINGS__PUBLISH_API_URL=https://teacher-training-api-pr-$PR_NUMBER.london.cloudapps.digital" >> $GITHUB_ENV;
+            echo "base_url: https://teacher-training-api-pr-$PR_NUMBER.london.cloudapps.digital" >> config/settings/review.yml
+            echo "publish_api_url: https://teacher-training-api-pr-$PR_NUMBER.london.cloudapps.digital" >> config/settings/review.yml
           fi;
 
       - name: Smoke Tests ${{ github.event.inputs.environment }}
