[1949] Fix sentry reporting in controllers
Previously we were swallowing exceptions in production using
rescue_from and not capturing them in sentry. Make this configurable
and make sure that sentry is notified

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -55,3 +55,4 @@ skylight:
   authentication: please_change_me
 mapit_api_key: please_change_me
 mapit_url: https://mapit.mysociety.org
+render_json_errors: false
