--- a/.github/workflows/database-restore.yml
+++ b/.github/workflows/database-restore.yml
@@ -41,27 +41,26 @@ jobs:
           cf conduit teacher-training-api-postgres-prod -- pg_dump --encoding utf8 --clean --no-owner --if-exists -f $PROD_BACKUP
           echo "PROD_BACKUP=$PROD_BACKUP" >> $GITHUB_ENV
 
-
       - name: Login to Azure
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS_PRODUCTION }}
 
-      - name: Get storageAccount connection string from keyvault
+      - name: Get storage account connection string from Key Vault
+        id: get_connection_string
         uses: Azure/get-keyvault-secrets@v1
         with:
           keyvault: s121p01-shared-kv-01
           secrets: TTAPI-STORAGE-ACCOUNT-CONNECTION-STRING-PRODUCTION
-        id: GetSecretAction
 
-      - name: Upload sqldbdump to storageAccount
-        uses: bacongobbler/azure-blob-storage-upload@v1.2.0
-        with:
-          source_dir: ./
-          container_name: sqldbdump
-          connection_string: ${{ steps.GetSecretAction.outputs.TTAPI-STORAGE-ACCOUNT-CONNECTION-STRING-PRODUCTION }}
-          extra_args: '--pattern *.sql'
-          sync: false
+      - name: Upload Backup to Azure Storage
+        run: |
+          tar -cvzf ${{ env.PROD_BACKUP }}.tar.gz ${{ env.PROD_BACKUP }}
+          az storage blob upload --container-name sqldbdump \
+          --file ${{ env.PROD_BACKUP }}.tar.gz --name ${{ env.PROD_BACKUP }}.tar.gz \
+          --connection-string ${AZURE_STORAGE_CONNECTION_STRING}
+        env:
+          AZURE_STORAGE_CONNECTION_STRING: ${{ steps.get_connection_string.outputs.TTAPI-STORAGE-ACCOUNT-CONNECTION-STRING-PRODUCTION }}
 
       - name: Sanitise the Database backup
         run: |
