--- a/.github/workflows/delete-review-app.yml
+++ b/.github/workflows/delete-review-app.yml
@@ -36,10 +36,8 @@ jobs:
       - name: Set Environment variables
         run: |
           PR_NUMBER=${{ github.event.pull_request.number }}
-          echo "DOCKER_IMAGE=$DOCKER_IMAGE" >> $GITHUB_ENV
           echo "PR_NUMBER=$PR_NUMBER" >> $GITHUB_ENV
           echo "DEPLOY_ENV=review" >> $GITHUB_ENV
-          echo "TF_VAR_paas_web_app_host_name=$PR_NUMBER" >> $GITHUB_ENV
           echo "TF_STATE_FILE=pr-$PR_NUMBER.tfstate" >> $GITHUB_ENV
 
           pr_state_file=$(az storage blob list -c review-paas-tfstate \
@@ -52,7 +50,6 @@ jobs:
           echo "TF_VAR_key_vault_app_secret_name=$TF_VAR_key_vault_app_secret_name" >> $GITHUB_ENV
           echo "TF_VAR_key_vault_infra_secret_name=$TF_VAR_key_vault_infra_secret_name" >> $GITHUB_ENV
         env:
-          DOCKER_IMAGE: ${{ format('dfedigital/teacher-training-api:paas-{0}', github.sha) }}
           AZURE_STORAGE_CONNECTION_STRING: ${{ secrets.AZURE_STORAGE_CONNECTION_STRING_REVIEW }}
 
       - uses: azure/login@v1
@@ -71,14 +68,12 @@ jobs:
 
       - name: Terraform Destroy
         if: env.TF_STATE_EXISTS == 'true'
-        working-directory: terraform
-        run: |
-            terraform init -backend-config workspace_variables/review_backend.tfvars -backend-config=key=${{ env.TF_STATE_FILE }}
-            terraform destroy -var-file workspace_variables/review.tfvars -auto-approve
+        run: make review ci destroy
         env:
           ARM_ACCESS_KEY:             ${{ secrets.ARM_ACCESS_KEY_REVIEW }}
-          TF_VAR_paas_docker_image:   ${{ env.DOCKER_IMAGE }}
+          IMAGE_TAG:                  ${{ github.event.inputs.sha }}
           TF_VAR_azure_credentials:   ${{ secrets.AZURE_CREDENTIALS_REVIEW }}
+          APP_NAME:                   ${{ env.PR_NUMBER }}
 
       - name: Delete tf state file
         if: env.TF_STATE_EXISTS == 'true'
