--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,14 +79,12 @@ jobs:
 
       - name: Set Environment variables
         run: |
-          echo "DOCKER_IMAGE=$DOCKER_IMAGE" >> $GITHUB_ENV
           echo "DEPLOY_ENV=$DEPLOY_ENV" >> $GITHUB_ENV
-          if [ ! -z "${{ github.event.inputs.pr }}" ]; then
+          if [ -n "${{ github.event.inputs.pr }}" ]; then
             PR_NUMBER=${{ github.event.inputs.pr }}
             echo "PR_NUMBER=$PR_NUMBER" >> $GITHUB_ENV
             echo "DEPLOY_ENV=review" >> $GITHUB_ENV
-            echo "BACKEND_KEY=-backend-config=key=pr-$PR_NUMBER.tfstate" >> $GITHUB_ENV
-            echo "TF_VAR_paas_web_app_host_name=$PR_NUMBER" >> $GITHUB_ENV
+            echo "APP_NAME=$PR_NUMBER" >> $GITHUB_ENV
             echo "DEPLOY_URL=https://teacher-training-api-pr-$PR_NUMBER.london.cloudapps.digital" >> $GITHUB_ENV
             . terraform/workspace_variables/review.sh
           else
@@ -98,7 +96,6 @@ jobs:
           echo "TF_VAR_key_vault_app_secret_name=$TF_VAR_key_vault_app_secret_name" >> $GITHUB_ENV
           echo "TF_VAR_key_vault_infra_secret_name=$TF_VAR_key_vault_infra_secret_name" >> $GITHUB_ENV
         env:
-          DOCKER_IMAGE: ${{ format('dfedigital/teacher-training-api:{0}', github.event.inputs.sha) }}
           DEPLOY_ENV: ${{ matrix.environment }}
 
       - uses: azure/login@v1
@@ -114,15 +111,12 @@ jobs:
             ${{ env.TF_VAR_key_vault_infra_secret_name }}
 
       - name: Terraform init, plan & apply
-        working-directory: terraform
-        run: |
-            terraform init -backend-config workspace_variables/${{ env.DEPLOY_ENV }}_backend.tfvars $BACKEND_KEY
-            terraform plan -var-file workspace_variables/${{ env.DEPLOY_ENV }}.tfvars -out tfplan
-            terraform apply -auto-approve -input=false "tfplan"
+        run: make ${{env.DEPLOY_ENV}} ci deploy
         env:
           ARM_ACCESS_KEY:             ${{ secrets[format('ARM_ACCESS_KEY_{0}', env.DEPLOY_ENV)] }}
-          TF_VAR_paas_docker_image:   ${{ env.DOCKER_IMAGE }}
+          IMAGE_TAG:                  ${{ github.event.inputs.sha }}
           TF_VAR_azure_credentials:   ${{ secrets[format('AZURE_CREDENTIALS_{0}', env.DEPLOY_ENV)] }}
+          CONFIRM_PRODUCTION:         yes
 
       - name: Trigger ${{ env.DEPLOY_ENV }} Smoke Tests
         uses: benc-uk/workflow-dispatch@v1
