Load test environment
Config for deploying a load test environment

--- a/terraform/workspace_variables/app_config.yml
+++ b/terraform/workspace_variables/app_config.yml
@@ -31,3 +31,8 @@ review:
   <<: *default
   RAILS_ENV: review
   RACK_ENV: review
+
+loadtest:
+  <<: *default
+  RAILS_ENV: loadtest
+  RACK_ENV: loadtest
