--- a/.github/workflows/database-restore.yml
+++ b/.github/workflows/database-restore.yml
@@ -39,8 +39,8 @@ jobs:
           now=$(date +"%F-%H-%M-%S")
           PROD_BACKUP=prod_backup-$now.sql
           cf conduit teacher-training-api-postgres-prod -- pg_dump --encoding utf8 --clean --no-owner --if-exists -f $PROD_BACKUP
+          tar -cvzf ${PROD_BACKUP}.tar.gz ${PROD_BACKUP}
           echo "PROD_BACKUP=$PROD_BACKUP" >> $GITHUB_ENV
-
 
       - name: Login to Azure
         uses: azure/login@v1
@@ -54,14 +54,11 @@ jobs:
           secrets: TTAPI-STORAGE-ACCOUNT-CONNECTION-STRING-PRODUCTION
         id: GetSecretAction
 
-      - name: Upload sqldbdump to storageAccount
-        uses: bacongobbler/azure-blob-storage-upload@v1.2.0
-        with:
-          source_dir: ./
-          container_name: sqldbdump
-          connection_string: ${{ steps.GetSecretAction.outputs.TTAPI-STORAGE-ACCOUNT-CONNECTION-STRING-PRODUCTION }}
-          extra_args: '--pattern *.sql'
-          sync: false
+      - name: Upload Backup to Azure Storage
+        run: |
+          az storage blob upload --container-name prod-db-backup \
+          --file ${PROD_BACKUP}.tar.gz --name ${PROD_BACKUP}.tar.gz \
+          --connection-string '${{ env.TTAPI-STORAGE-ACCOUNT-CONNECTION-STRING-PRODUCTION }}'
 
       - name: Sanitise the Database backup
         run: |
