[2299] Add persona login
- Add dfe_signin and persona mode logic to the authentication_service
- Add persona view
- Add admin persona component button
- Add logic to the view which displays sign in if mode == dfe_signin
- Add logic to the view which displays persona if mode == persona
- Add logic to omniauth for new auth if AuthenticationService.persona?
- Add Persona controller with conditional if mode == persona
- Add persona routes and logic to use persona route if mode == persona
- Add sign_out logic to make signout button work
- Add admin persona details to Settings
- Add basic auth (disabled by default)

--- a/config/settings/qa.yml
+++ b/config/settings/qa.yml
@@ -15,3 +15,10 @@ skylight:
   enable: true
 environment:
   name: "qa"
+
+authentication:
+  # mode: dfe_signin  # default authentication mode
+  mode: persona     # none critical systems, ie localhost
+
+basic_auth:
+  enabled: true
