--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,7 +92,7 @@ jobs:
         docker-compose exec -T web /bin/sh -c "apk --no-cache add curl"
         docker-compose exec -T web /bin/sh -c "bundle exec rake cc:setup"
       env:
-        GIT_BRANCH: ${{env.BRANCH_TAG}}
+        IMAGE_TAG: ${{ env.DOCKER_IMAGE_TAG }}
 
     - name: Run Ruby Linter
       run: docker-compose exec -T web /bin/sh -c 'bundle exec rubocop --format clang'
@@ -103,7 +103,7 @@ jobs:
         docker-compose exec -T web /bin/sh -c 'bundle exec rake parallel:setup'
         docker-compose exec -T web /bin/sh -c 'bundle exec rake "parallel:spec[,, -O .azure_parallel]"'
       env:
-        GIT_BRANCH: ${{env.BRANCH_TAG}}
+        IMAGE_TAG: ${{ env.DOCKER_IMAGE_TAG }}
         CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
 
     - name: Wait for review app deployment
