--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Get values for current commit (Push)
+      if: github.event_name == 'push'
       run: |
         GIT_REF=${{github.ref}}
         GIT_BRANCH=${GIT_REF##*/}
@@ -27,6 +28,7 @@ jobs:
         echo "DOCKER_IMAGE_TAG=$GITHUB_SHA" >> $GITHUB_ENV
 
     - name: Get values for current commit (Pull request)
+      if: github.event_name == 'pull_request'
       run: |
         # This is the actual PR branch
         GIT_REF=${{ github.head_ref }}
