--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -150,7 +150,7 @@ jobs:
         if: ${{ failure() && github.ref == 'refs/heads/master' }}
         uses: rtCamp/action-slack-notify@master
         env:
-          SLACK_CHANNEL: twd_bat_devops
+          SLACK_CHANNEL: twd_publish_tech
           SLACK_COLOR: '#ef5343'
           SLACK_ICON_EMOJI: ':github-logo:'
           SLACK_USERNAME: Teacher Training API
