--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -44,11 +44,11 @@ jobs:
       - name: Smoke Tests ${{ github.event.inputs.environment }}
         run: RAILS_ENV=${{ github.event.inputs.environment }} ./bin/bundle exec rspec spec/smoke --format documentation
 
-      - name: 'Notify #twd_publish_register_tech on failure'
+      - name: 'Notify #twd_publish_tech on failure'
         if: ${{ failure() && github.event.inputs.environment != 'review' }}
         uses: rtCamp/action-slack-notify@master
         env:
-          SLACK_CHANNEL: twd_publish_register_tech
+          SLACK_CHANNEL: twd_publish_tech
           SLACK_COLOR: '#ef5343'
           SLACK_ICON_EMOJI: ':github-logo:'
           SLACK_USERNAME: Teacher Training API
