[xxx] Add statistics to analytics.yml
We need the data from the statistics table in BigQuery.

--- a/config/analytics.yml
+++ b/config/analytics.yml
@@ -155,6 +155,10 @@ shared:
     - latitude
     - longitude
     - urn
+  statistic:
+    - json_data
+    - created_at
+    - updated_at
   subject:
     - id
     - type
