--wip-- Publish merge - add 'About your organisation' section

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -68,3 +68,10 @@ google:
 
 features:
   send_request_data_to_bigquery: false
+  rollover:
+    # During rollover providers should be able to edit current & next recruitment cycle courses
+    can_edit_current_and_next_cycles: false
+    # Normally a short period of time between rollover and the next cycle
+    # actually starting when it would be set to false
+    has_current_cycle_started?: true
+    show_next_cycle_allocation_recruitment_page: false
